Moved OpenWeatherMap API request to backend

--- a/weatherapp-backend/package.json
+++ b/weatherapp-backend/package.json
@@ -11,6 +11,7 @@
   "author": "Felix Virtanen",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
     "cities.json": "^1.1.15",
     "cors": "^2.8.5",
